# disaster_tweet_classification

./: Notebook_format_new.ipynb  README.md  credentials.py  main.py  preprocessing.py  pyproject.toml  utils.py
submissions/: submission_BERTWEET_1_epoch.csv  submission_MISTRAL_changed_1.csv  submission_MISTRAL_changed_2.csv  submission_Mistral_1_epochs.csv  submission_Mistral_2_epochs.csv  submission_Mistral_full_1.csv  submission_Mistral_full_2.csv  submission_Mistral_full_3.csv  submission_Mistral_full_4.csv  submission_gemma_2_epochs.csv  submission_gemma_5_epochs.csv  submission_gemma_6_epochs.csv  submission_test.csv
