[tool.poetry]
name = "implementation-test"
version = "0.1.0"
description = ""
authors = ["Tristan Hucher <tristan.hucher@etu.utc.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.2.2"
transformers = "^4.39.1"
scikit-learn = "^1.4.1.post1"
jupyter = "^1.0.0"
dataset = "^1.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

